package rubrica;

public class Type {

    public static final String[] tipi = {
      "Principale",
      "Abitazione" ,
      "Lavoro"
    };

}
